--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "damp-feather",
+  "name": "Motiv",
   "version": "1.0.0",
-  "description": "My app description",
+  "description": "What's your Motiv?",
   "scripts": {
     "build": "webpack --display-error-details",
     "deploy": "npm test && git push heroku master",
     "postinstall": "npm run build",
-    "start": "node server.js",
+    "start": "nodemon server/server.js",
     "test": "npm run test:client && npm run test:server",
     "test:client": "mocha test/client --recursive --compilers js:babel-register",
     "test:server": "mocha test/server --recursive --compilers js:babel-register"
