--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jade": "^1.11.0",
     "jsonwebtoken": "^5.7.0",
     "knex": "^0.10.0",
+    "lodash": "^4.14.1",
     "moment": "^2.12.0",
     "morgan": "^1.7.0",
     "mysql": "^2.10.2",
