--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "scripts": {
     "build": "webpack --display-error-details",
     "deploy": "npm test && git push heroku master",
-    "webpack-watch": "webpack-dev-server --progress --inline --hot",
     "postinstall": "npm run build",
-    "start": "nodemon --ignore 'app/*.js' server.js",
+    "start": "nodemon --ignore 'app/*.js' --ignore 'public/js/bundle.js' server.js",
     "test": "npm run test:client && npm run test:server",
-    "dev": "concurrently --kill-others \"npm run webpack-watch\" \"npm run start\"",
+    "dev": "npm run build && concurrently --kill-others \"npm run start\"",
     "test:client": "mocha test/client --recursive --compilers js:babel-register",
     "test:server": "mocha test/server --recursive --compilers js:babel-register"
   },
@@ -50,8 +49,6 @@
     "redux-thunk": "^2.0.1",
     "request": "^2.69.0",
     "webpack": "^1.12.14",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.10.0",
     "whatwg-fetch": "^0.11.0"
   },
   "devDependencies": {
@@ -63,6 +60,7 @@
     "fetch-mock": "3.0.2",
     "mocha": "^2.4.5",
     "react-addons-test-utils": "^15.0.2",
+    "react-hot-loader": "^1.3.0",
     "redux-mock-store": "^1.0.2",
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0",
