--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,10 @@
 sudo: required
 language: node_js
 node_js:
-  - 0.12
+  - node
+  - 6.1.x
+  - 6.0.x
 branches:
   only:
     - master
     - dev
-before_script:
-  - npm install -g webpack
-  - npm install -g webpack-dev-server
