--- a/package.json
+++ b/package.json
@@ -14,12 +14,7 @@
   },
   "dependencies": {
     "async": "^1.5.2",
-    "babel-core": "^6.7.2",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-react-transform": "^2.0.2",
-    "babel-polyfill": "^6.7.2",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
+    "babel-runtime": "^6.11.6",
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.15.1",
     "bookshelf": "^0.9.2",
@@ -37,13 +32,11 @@
     "mysql": "^2.10.2",
     "node-sass-middleware": "^0.9.7",
     "nodemailer": "^2.3.0",
-    "react": "15.1.0",
+    "react": "^15.3.0",
     "react-cookie": "^0.4.5",
     "react-dom": "15.1.0",
     "react-redux": "4.4.1",
     "react-router": "^2.4.0",
-    "react-transform-catch-errors": "^1.0.2",
-    "react-transform-hmr": "^1.0.4",
     "redbox-react": "^1.2.4",
     "redux": "^3.3.1",
     "redux-thunk": "^2.0.1",
@@ -52,14 +45,19 @@
     "whatwg-fetch": "^0.11.0"
   },
   "devDependencies": {
+    "babel-core": "^6.7.2",
+    "babel-loader": "^6.2.4",
     "babel-plugin-rewire": "^1.0.0-rc-3",
+    "babel-polyfill": "^6.7.2",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-react-hmre": "^1.1.1",
     "babel-register": "^6.8.0",
     "chai": "^3.5.0",
     "concurrently": "^2.2.0",
     "enzyme": "^2.3.0",
     "fetch-mock": "3.0.2",
     "mocha": "^2.4.5",
-    "react-addons-test-utils": "^15.0.2",
     "react-hot-loader": "^1.3.0",
     "redux-mock-store": "^1.0.2",
     "sinon": "^1.17.3",
