--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "enzyme": "^2.3.0",
     "fetch-mock": "3.0.2",
     "mocha": "^2.4.5",
+    "react-addons-test-utils": "^15.3.0",
     "react-hot-loader": "^1.3.0",
     "redux-mock-store": "^1.0.2",
     "sinon": "^1.17.3",
