--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "15.1.0",
     "react-redux": "4.4.1",
     "react-router": "^2.4.0",
+    "react-router-redux": "^4.0.5",
     "redbox-react": "^1.2.4",
     "redux": "^3.3.1",
     "redux-thunk": "^2.0.1",
