--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "compression": "^1.6.2",
     "cookie-parser": "^1.4.1",
     "dotenv": "^2.0.0",
+    "es6-promise": "^3.2.1",
     "express": "^4.13.4",
     "express-validator": "^2.20.4",
+    "isomorphic-fetch": "^2.2.1",
     "jade": "^1.11.0",
     "jsonwebtoken": "^5.7.0",
     "knex": "^0.10.0",
@@ -42,8 +44,7 @@
     "redux": "^3.3.1",
     "redux-thunk": "^2.0.1",
     "request": "^2.69.0",
-    "webpack": "^1.12.14",
-    "whatwg-fetch": "^0.11.0"
+    "webpack": "^1.12.14"
   },
   "devDependencies": {
     "babel-core": "^6.7.2",
