--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mysql": "^2.10.2",
     "node-sass-middleware": "^0.9.7",
     "nodemailer": "^2.3.0",
+    "rc-progress": "^1.0.4",
     "react": "15.1.0",
     "react-cookie": "^0.4.5",
     "react-dom": "15.1.0",
