--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "node-sass-middleware": "^0.9.7",
     "nodemailer": "^2.3.0",
     "react": "^15.3.0",
+    "rc-progress": "^1.0.4",
     "react-cookie": "^0.4.5",
     "react-dom": "15.1.0",
     "react-redux": "4.4.1",
