--- a/package.json
+++ b/package.json
@@ -29,18 +29,20 @@
     "jsonwebtoken": "^5.7.0",
     "knex": "^0.10.0",
     "lodash": "^4.14.1",
+    "material-ui": "^0.15.3",
     "moment": "^2.12.0",
     "morgan": "^1.7.0",
     "mysql": "^2.10.2",
     "node-sass-middleware": "^0.9.7",
     "nodemailer": "^2.3.0",
-    "react": "^15.3.0",
     "rc-progress": "^1.0.4",
+    "react": "^15.3.0",
     "react-cookie": "^0.4.5",
     "react-dom": "15.1.0",
     "react-redux": "4.4.1",
     "react-router": "^2.4.0",
     "react-router-redux": "^4.0.5",
+    "react-tap-event-plugin": "^1.0.0",
     "redbox-react": "^1.2.4",
     "redux": "^3.3.1",
     "redux-thunk": "^2.0.1",
