[config] replace jade with ejs and fix failing tests

--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "compression": "^1.6.2",
     "cookie-parser": "^1.4.1",
     "dotenv": "^2.0.0",
+    "ejs": "^2.5.1",
     "es6-promise": "^3.2.1",
     "express": "^4.13.4",
     "express-validator": "^2.20.4",
     "isomorphic-fetch": "^2.2.1",
-    "jade": "^1.11.0",
     "jsonwebtoken": "^5.7.0",
     "knex": "^0.10.0",
     "lodash": "^4.14.1",
@@ -60,6 +60,7 @@
     "babel-register": "^6.8.0",
     "chai": "^3.5.0",
     "concurrently": "^2.2.0",
+    "env-test": "^1.0.0",
     "enzyme": "^2.3.0",
     "fetch-mock": "3.0.2",
     "mocha": "^2.4.5",
