--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "webpack --display-error-details",
     "deploy": "npm test && git push heroku master",
     "postinstall": "npm run build",
+    "webpack-watch": "webpack -w",
     "start": "nodemon --ignore 'app/*.js' --ignore 'public/js/bundle.js' server/server.js",
     "test": "npm run test:client && npm run test:server",
     "dev": "npm run build && concurrently --kill-others \"npm run start\"",
@@ -14,17 +15,21 @@
   },
   "dependencies": {
     "async": "^1.5.2",
+    "aws-sdk": "^2.4.13",
     "babel-runtime": "^6.11.6",
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.15.1",
     "bookshelf": "^0.9.2",
+    "bookshelf-modelbase": "^2.10.1",
     "compression": "^1.6.2",
     "cookie-parser": "^1.4.1",
+    "crypto": "0.0.3",
     "dotenv": "^2.0.0",
     "ejs": "^2.5.1",
     "es6-promise": "^3.2.1",
     "express": "^4.13.4",
     "express-validator": "^2.20.4",
+    "fs": "0.0.2",
     "isomorphic-fetch": "^2.2.1",
     "jsonwebtoken": "^5.7.0",
     "knex": "^0.10.0",
@@ -32,6 +37,7 @@
     "material-ui": "^0.15.3",
     "moment": "^2.12.0",
     "morgan": "^1.7.0",
+    "multiparty": "^4.1.2",
     "mysql": "^2.10.2",
     "node-sass-middleware": "^0.9.7",
     "nodemailer": "^2.3.0",
@@ -39,14 +45,18 @@
     "react": "^15.3.0",
     "react-cookie": "^0.4.5",
     "react-dom": "15.1.0",
+    "react-fileupload": "^2.2.0",
     "react-redux": "4.4.1",
     "react-router": "^2.4.0",
     "react-router-redux": "^4.0.5",
+    "react-s3-upload": "^0.1.6",
+    "react-s3-uploader": "^3.2.1",
     "react-tap-event-plugin": "^1.0.0",
     "redbox-react": "^1.2.4",
     "redux": "^3.3.1",
     "redux-thunk": "^2.0.1",
     "request": "^2.69.0",
+    "uuid": "^2.0.2",
     "webpack": "^1.12.14"
   },
   "devDependencies": {
