--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "webpack-watch": "webpack -w",
     "start": "nodemon --ignore 'app/*.js' --ignore 'public/js/bundle.js' server/server.js",
     "test": "npm run test:client && npm run test:server",
-    "dev": "npm run build && concurrently --kill-others \"npm run start\"",
+    "dev": "concurrently --kill-others \"npm run webpack-watch\" \"npm run start\"",
     "test:client": "mocha test/client --recursive --compilers js:babel-register",
     "test:server": "mocha test/server --recursive --compilers js:babel-register"
   },
@@ -37,7 +37,6 @@
     "material-ui": "^0.15.3",
     "moment": "^2.12.0",
     "morgan": "^1.7.0",
-    "multiparty": "^4.1.2",
     "mysql": "^2.10.2",
     "node-sass-middleware": "^0.9.7",
     "nodemailer": "^2.3.0",
@@ -49,7 +48,6 @@
     "react-redux": "4.4.1",
     "react-router": "^2.4.0",
     "react-router-redux": "^4.0.5",
-    "react-s3-upload": "^0.1.6",
     "react-s3-uploader": "^3.2.1",
     "react-tap-event-plugin": "^1.0.0",
     "redbox-react": "^1.2.4",
@@ -66,7 +64,6 @@
     "babel-polyfill": "^6.7.2",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
-    "babel-preset-react-hmre": "^1.1.1",
     "babel-register": "^6.8.0",
     "chai": "^3.5.0",
     "concurrently": "^2.2.0",
@@ -75,12 +72,10 @@
     "fetch-mock": "3.0.2",
     "mocha": "^2.4.5",
     "react-addons-test-utils": "^15.3.0",
-    "react-hot-loader": "^1.3.0",
     "redux-mock-store": "^1.0.2",
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0",
-    "supertest": "^1.2.0",
-    "webpack-dev-server": "^1.14.1"
+    "supertest": "^1.2.0"
   },
   "engines": {
     "node": "6.1.0",
