--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-cookie": "^0.4.5",
     "react-dom": "15.1.0",
     "react-fileupload": "^2.2.0",
+    "react-infinite": "^0.9.2",
     "react-redux": "4.4.1",
     "react-router": "^2.4.0",
     "react-router-redux": "^4.0.5",
