[style] style profile page

--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "mysql": "^2.10.2",
     "node-sass-middleware": "^0.9.7",
     "nodemailer": "^2.3.0",
+    "pui-react-tabs": "^5.3.0",
     "rc-progress": "^1.0.4",
     "react": "^15.3.0",
+    "react-bootstrap": "^0.30.2",
     "react-cookie": "^0.4.5",
     "react-dom": "15.1.0",
     "react-fileupload": "^2.2.0",
