--- a/package.json
+++ b/package.json
@@ -43,15 +43,18 @@
     "pui-react-tabs": "^5.3.0",
     "rc-progress": "^1.0.4",
     "react": "^15.3.0",
+    "react-addons-pure-render-mixin": "^15.3.0",
     "react-bootstrap": "^0.30.2",
     "react-cookie": "^0.4.5",
     "react-dom": "15.1.0",
     "react-fileupload": "^2.2.0",
     "react-infinite": "^0.9.2",
+    "react-modal": "^1.4.0",
     "react-redux": "4.4.1",
     "react-router": "^2.4.0",
     "react-router-redux": "^4.0.5",
     "react-s3-uploader": "^3.2.1",
+    "react-spark-scroll-gsap": "^3.0.0",
     "react-tap-event-plugin": "^1.0.0",
     "redbox-react": "^1.2.4",
     "redux": "^3.3.1",
