--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "^4.13.4",
     "express-validator": "^2.20.4",
     "fs": "0.0.2",
+    "in-viewport": "^3.4.1",
     "isomorphic-fetch": "^2.2.1",
     "jsonwebtoken": "^5.7.0",
     "knex": "^0.10.0",
