--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react": "^15.3.0",
     "react-addons-pure-render-mixin": "^15.3.0",
     "react-bootstrap": "^0.30.2",
+    "react-bootstrap-form": "^0.1.4-beta6",
     "react-cookie": "^0.4.5",
     "react-dom": "15.1.0",
     "react-fileupload": "^2.2.0",
