--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.15.1",
     "bookshelf": "^0.9.2",
+    "bookshelf-cascade-delete": "^1.0.5",
     "bookshelf-modelbase": "^2.10.1",
     "compression": "^1.6.2",
     "cookie-parser": "^1.4.1",
