--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "mysql": "^2.10.2",
     "node-sass-middleware": "^0.9.7",
     "nodemailer": "^2.3.0",
+    "nodemon": "^1.10.0",
     "pui-react-tabs": "^5.3.0",
     "rc-progress": "^1.0.4",
     "react": "^15.3.0",
