[config] update run scripts

--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "deploy": "npm test && git push heroku master",
     "postinstall": "npm run build",
     "webpack-watch": "webpack --watch --watch-poll",
-    "start": "nodemon --ignore 'app/*.js' --ignore 'public/js/bundle.js' server/server.js",
+    "start": "npm run build && node server/server.js",
     "test": "npm run test:client && npm run test:server",
-    "dev": "concurrently --kill-others \"npm run webpack-watch\" \"npm run start\"",
+    "nodemon": "nodemon --ignore 'app/*.js' --ignore 'public/js/bundle.js' server/server.js",
+    "dev": "concurrently --kill-others \"npm run webpack-watch\" \"npm run nodemon\"",
     "test:client": "mocha test/client --recursive --compilers js:babel-register",
     "test:server": "mocha test/server --recursive --compilers js:babel-register"
   },
@@ -42,7 +43,6 @@
     "mysql": "^2.10.2",
     "node-sass-middleware": "^0.9.7",
     "nodemailer": "^2.3.0",
-    "nodemon": "^1.10.0",
     "pui-react-tabs": "^5.3.0",
     "rc-progress": "^1.0.4",
     "react": "^15.3.0",
