--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bookshelf": "^0.9.2",
     "bookshelf-cascade-delete": "^1.0.5",
     "bookshelf-modelbase": "^2.10.1",
+    "bootstrap": "^4.0.0-alpha.3",
     "compression": "^1.6.2",
     "cookie-parser": "^1.4.1",
     "crypto": "0.0.3",
@@ -60,6 +61,7 @@
     "react-fileupload": "^2.2.0",
     "react-infinite": "^0.9.2",
     "react-modal": "^1.4.0",
+    "react-list": "^0.7.20",
     "react-redux": "4.4.1",
     "react-router": "^2.4.0",
     "react-router-redux": "^4.0.5",
