--- a/package.json
+++ b/package.json
@@ -63,6 +63,8 @@
     "react-infinite": "^0.9.2",
     "react-list": "^0.7.20",
     "react-modal": "^1.4.0",
+    "react-parallax": "^0.4.3",
+    "react-parallax-hover": "^0.3.1",
     "react-redux": "4.4.1",
     "react-router": "^2.4.0",
     "react-router-redux": "^4.0.5",
